<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Material3.DayNight.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_condensed_medium"
            android:gravity="center"
            android:text="@string/log_in"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1.3dp"
            android:layout_marginHorizontal="170dp"
            android:background="#EF3900"
            android:gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:hint="@string/enter_email"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/theme_grey"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:fontFamily="@font/barlow_condensed_medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:hint="@string/enter_password"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/theme_grey"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:fontFamily="@font/barlow_condensed_medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/purple_500"
            android:fontFamily="@font/barlow_condensed_medium"
            android:padding="10sp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            app:cornerRadius="2dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_in_with"
            android:fontFamily="@font/barlow_condensed_medium"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"

            >
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/google_signIn"
                android:layout_marginHorizontal="16dp"
                android:clickable="true"
                android:focusable="true">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:drawableTop="@drawable/google_icon"
                    android:fontFamily="@font/barlow_condensed_medium"
                    android:gravity="center"
                    android:text="@string/google"
                    tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/fb_signIn"
                android:layout_marginHorizontal="16dp"
                android:clickable="true"
                android:focusable="true">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/facebook"
                    android:gravity="center"
                    android:fontFamily="@font/barlow_condensed_medium"
                    android:layout_margin="10dp"
                    android:drawableTop="@drawable/ic_facebook"
                    />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/twitter_signIn"
                android:layout_marginHorizontal="16dp"
                android:clickable="true"
                android:focusable="true">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/twitter"
                    android:gravity="center"
                    android:fontFamily="@font/barlow_condensed_medium"
                    android:layout_margin="10dp"
                    android:drawableTop="@drawable/ic_twitter"
                    />
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/barlow_condensed_medium"
                android:gravity="center|end"
                android:text="@string/don_t_have_an_account" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_link"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/barlow_condensed_medium"
                android:gravity="center|start"
                android:text="@string/sign_up_here"
                android:textColor="#00838F"
                app:cornerRadius="2dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>